# Dobby

./: CLAUDE.md  CMakeLists.txt
.github/workflows/: Builder.yaml  build.yml
builtin-plugin/ApplicationEventMonitor/: dynamic_loader_monitor.cc  file_operation_monitor.cc  posix_file_descriptor_operation_monitor.cc
common/: os_arch_features.h  pac_kit.h
examples/: CMakeLists.txt  instrument_post_handler.cc
include/: dobby.h
scripts/: Dockerfile  Dockerfile.android  platform_builder.py
source/: Interceptor.h  dobby.cpp
source/Backend/UserMode/ExecMemory/: code-patch-tool-darwin.cc  code-patch-tool-posix.cc  code-patch-tool-windows.cc
source/InstructionRelocation/arm/: InstructionRelocationARM.cc  InstructionRelocationARM.h
source/InstructionRelocation/x86/: InstructionRelocationX86.cc
source/InterceptRouting/: InlineHookRouting.h  InstrumentRouting.h  InterceptRouting.h
source/InterceptRouting/InstrumentRouting/: instrument_routing_handler.cpp
source/InterceptRouting/NearBranchTrampoline/: NearBranchTrampoline.h
source/MemoryAllocator/: CodeMemBuffer.h  MemoryAllocator.h  NearMemoryAllocator.h
source/PlatformUtil/: ProcessRuntime.h
source/TrampolineBridge/ClosureTrampolineBridge/: ClosureTrampoline.h  common_bridge_handler.h
source/TrampolineBridge/Trampoline/: Trampoline.h  trampoline_arm.cc  trampoline_x86.cc
source/core/assembler/: assembler-arm.cc  assembler-arm.h  assembler-ia32.cc  assembler-ia32.h  assembler.h  pseudo_label.h
source/dobby/: common.h  dobby_error.cc  dobby_error.h  platform_mutex.h
(+22 files in other folders)
